<resources>
    <string name="app_name">Taypeer</string>
    <string name="runtime_stage">Independent password and passphrase generation.</string>
    <string name="generator">Password generator</string>
    <string name="length">Length</string>
    <string name="generate">Generate</string>
    <string name="operation_failed">The operation failed. Check the parameters and try again.</string>
    <string name="hide">Hide</string>
    <string name="reveal">Reveal</string>
    <string name="copy">Copy for 30 seconds</string>
    <string name="passphrase">Passphrase</string>
    <string name="words">Words</string>
...
    <string name="lowercase">Lowercase letters</string>
    <string name="digits">Digits</string>
    <string name="punctuation">Punctuation</string>
    <string name="exclude_similar">Exclude similar characters</string>
    <string name="exclusions">Exclude characters</string>
    <string name="library">Databases</string>
    <string name="generator_short">Generator</string>
    <string name="create_database">Create database…</string>
    <string name="open_database">Open database…</string>
    <string name="receive_database">Receive database…</string>
    <string name="create">Create</string>
    <string name="unlock">Unlock</string>
    <string name="master_password">Master password</string>
...
